# 202312-todo

./: .gitignore  .pylintrc  20240130_1 spam.py  CHANGELOG.en.md  CHANGELOG.md  LICENSE  LICENSE-en  LICENSE-ru  README.en.md  README.md  RELEASE_NOTES.en.md  RELEASE_NOTES.md  RELEASE_PAGE.en.md  RELEASE_PAGE.md  _eo20231206sql.db  api.py  cfg_working.py  cli.py  db_working.py  db_working_api.py  eo20231206sql.db  ep20231128 ToDo_begin.py  ep20231128_ToDo_begin.py  ep20231129ToDo.db  ep20231130click.py  ep20231201test.py  ep20231202KLI_1.py  ep20231204_todo_cli.db  ep20231204_todo_cli.ini  ep20231204_todo_cli.py  ep20231211_test_call_func.py  ep202312_first_gui.py  ep202405_todo_service.py  ep20241002_todo_api.py  logging_cfg.py  logging_config.py  main.py  main_api.py  openapi.json  pyproject.toml  (+5 more)
.devcontainer/: devcontainer.json
data_access/: archived_work_with_sqlite.py  json.py  sqlite.py
spam_files/: 20240211_ToDo_copilot.py  ep20231201test.py  ep20231211_test_call_func.py  ep20240713_oop-test.py  ep20240720_test_sys_exit.py  ep20240811test_namedtyple.py  ep20240811test_namedtyple_2.py  ep20241006learn_sql_more.py  ep_20240117_test.py  ep_20240119_test.py  my_local_tests.py  test_namespace.py  todo.db
src/api/: __init__.py  __main__.py  main_api.py
src/cfg/: cfg_working.py  logger_config.py  todo_config.ini
src/cli/: !__init__.py  __init__.py  __main__.py  cli.py  main.py
src/data/: init_db.py  sqlite-example-data-db-utf-8.sql  todo_main.db
src/db_access/: db_working.py  db_working_api.py  (+2 more)
tests/: test_api.py  test_cli.py  test_db_working.py
(+3 files in other folders)
