[project]
name = "202312-todo"
version = "0.1.0"
description = "A program for creating ToDo tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.120.4",
    "prettytable>=3.16.0",
    "pytest>=9.0.1",
    "ruff>=0.14.3",
]
